test/e2e/testdata/xlistenerset-tls-passthrough.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: xlistener-set-tls-passthrough
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: xlistener-gateway
    namespace: gateway-conformance-infra
  listeners:
    - name: extra-tls
      port: 18444
      protocol: TLS
      hostname: "example.com"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute
            group: gateway.networking.k8s.io
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  name: xlistener-tlsroute-passthrough
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      namespace: gateway-conformance-infra
      name: xlistener-set-tls-passthrough
      sectionName: extra-tls
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: tls-backend-2
          port: 443
